# shipboard_landing

./: GEMINI_PROMPT.md  SESSION_SUMMARY.md  SIMULATION_STATUS.md  STATUS.md  mav.parm  shipboard_landing_video.m
docs/: ai_tech_dev_plan.md  research_survey.md
gazebo/: BUOYANCY_STATUS.md  TROUBLESHOOTING.md  autonomous_landing.py  autonomous_landing_v2.py  autonomous_landing_v3.py  autonomous_landing_with_ship_motion.py  gz_landing_controller.py  hover_test.py  landing_controller_robust.py  landing_impulse.py  landing_simple.py  launch_ship.sh  launch_sim.sh  record_video.sh  run_demo.sh  ship_wave_motion.py  telemetry_debug.py  test_landing.py  test_landing.sh  view_camera.py
gazebo/plugins/: CMakeLIsts.txt  CMakeLists.txt  CMakeLists_old.txt  quadrotor_controller_plugin.cc  quadrotor_controller_plugin_old.cc  ship_motion_plugin.cc  ship_motion_plugin_old.cc
guidance/: __init__.py  higher_order_tau.py  navair_guidance.py  tau_guidance.py  zem_guidance.py
optimal_control/: __init__.py  pmp_controller.py  pmp_landing.py  pontryagin.py  pseudospectral.py  trajectory_planner.py  variable_horizon_mpc.py
quad_dynamics/: __init__.py  quadrotor.py
ship_motion/: __init__.py  ddg_motion.py
simulation/: __init__.py  ardupilot_gazebo_bridge.py  ardupilot_pmp_gazebo.py  controller_comparison.py  debug_landing.py  demo_for_meeting.py  demo_free_time.py  demo_pmp_landing.py  forecast_comparison.py  higher_order_guidance.py  landing_sim.py  landing_video.py  launch_ardupilot.sh  launch_gazebo.sh  mission_log.txt  mpc_landing.py  mpc_simple.py  pid_pmp_landing.py  (+9 more)
(+20 files in other folders)
